[gd_scene load_steps=15 format=2]

[ext_resource path="res://others/signpost/sign.png" type="Texture" id=1]
[ext_resource path="res://others/signpost/ballon.png" type="Texture" id=2]
[ext_resource path="res://others/signpost/Signpost.gd" type="Script" id=3]
[ext_resource path="res://audio/sound-effects/signpost.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.5, 27.5 )

[sub_resource type="DynamicFontData" id=2]
antialiased = false
font_path = "res://others/fonts/PixelOperatorMono-Bold.ttf"

[sub_resource type="DynamicFont" id=3]
size = 71
font_data = SubResource( 2 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Text:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "hide"
tracks/0/type = "value"
tracks/0/path = NodePath("Text:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "typewriter"
tracks/0/type = "value"
tracks/0/path = NodePath("Text:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "backwards"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "hide"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Text:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Signpost" type="Area2D"]
collision_layer = 128
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -0.5 )
shape = SubResource( 1 )

[node name="Ballon" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 2, -32 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )
offset = Vector2( -207.437, -207.437 )

[node name="Text" type="Label" parent="Ballon"]
margin_left = -477.105
margin_top = -394.13
margin_right = 62.895
margin_bottom = -97.1301
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Lorem ipsum dolor sit amet, sed do eiusmod tempor"
autowrap = true

[node name="AnimationPlayerText" type="AnimationPlayer" parent="Ballon/Text"]
root_node = NodePath("../..")
anims/RESET = SubResource( 4 )
anims/hide = SubResource( 6 )
anims/typewriter = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Ballon"]
anims/RESET = SubResource( 8 )
anims/backwards = SubResource( 10 )
anims/hide = SubResource( 9 )
anims/show = SubResource( 7 )

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SoundEffects"

[connection signal="body_entered" from="." to="." method="_on_Signpost_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Signpost_body_exited"]
[connection signal="animation_finished" from="Ballon/Text/AnimationPlayerText" to="." method="_on_AnimationPlayerText_animation_finished"]
[connection signal="animation_finished" from="Ballon/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="Ballon/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
